--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -1,4 +1,5 @@
 @import url("//unpkg.com/element-ui@2.15.0/lib/theme-chalk/index.css");
+/*@import url(element.css);*/
 .el-table .warning-row {
     background: oldlace;
 }
